src/objects/NRG_Array__c.object
<CustomObject>
    <fields>
        <fullName>Azimuth__c</fullName>
        <label>Azimuth</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Year_Production__c</fullName>
        <label>First Year Production</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter_Quantity__c</fullName>
        <label>Inverter Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inverter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inverter</label>
        <referenceTo>NRG_String_Component__c</referenceTo>
        <relationshipLabel>NRG Arrays</relationshipLabel>
        <relationshipName>NRG_Arrays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Module_Quantity__c</fullName>
        <label>Module Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>NRG Module</description>
        <inlineHelpText>NRG Module</inlineHelpText>
        <label>Module</label>
        <referenceTo>NRG_String_Component__c</referenceTo>
        <relationshipLabel>NRG Arrays (Module)</relationshipLabel>
        <relationshipName>NRG_String_Component</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NRG_Inverter_Id__c</fullName>
        <label>NRG Inverter Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Inverter__c</fullName>
        <label>NRG Inverter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>NRG Lead</label>
        <referenceTo>NRG_Lead__c</referenceTo>
        <relationshipLabel>NRG Arrays</relationshipLabel>
        <relationshipName>NRG_Arrays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NRG_Module_Id__c</fullName>
        <label>NRG Module Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Module__c</fullName>
        <label>NRG Module</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shading__c</fullName>
        <label>Shading</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solar system</label>
        <referenceTo>NRG_System__c</referenceTo>
        <relationshipLabel>NRG Arrays</relationshipLabel>
        <relationshipName>NRG_Arrays</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <defaultValue>&quot;Astrum&quot;</defaultValue>
        <label>Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>String_Number__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>String Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tilt__c</fullName>
        <label>Tilt</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>NRG Array</label>
    <nameField>
        <displayFormat>NAR-{00000}</displayFormat>
        <label>NRG Array Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NRG Arrays</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>